<resources>
    <string name="app_name">Graduación ITSU</string>
    <string name="numero_de_asiento">Número de Asiento:</string>
    <string name="numero_de_control">Número de control:</string>
    <string name="graduacion_itsu">Graduación ITSU</string>
    <string name="cancelar_inivitacion">Cancelar Invitación</string>
    <string name="cerrar">Cerrar</string>
    <string name="nombre">Nombre:</string>
    <string name="carrera">Carrera:</string>
    <string name="escanear_qr">Escanear QR</string>
    <string name="grupo">Grupo:</string>
    <string name="todo">TODO</string>
    <string name="gestor_central">Gestor central</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="ingenier_a_en_sistemas">Ingeniería en Sistemas </string>
    <string name="nueva_generacion">Nueva Generación</string>
    <string name="agregar">Agregar</string>
    <string name="actualizar_registro">Actualizar Registros</string>
    <string name="consultar">Consultar</string>
    <string name="n_mero_de_control">Número de control</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="asiento">Asiento</string>
    <string name="seleccione_una_carrera">Seleccione una carrera</string>
    <string name="seleccione_grupo">Seleccione un grupo</string>
    <string name="email">Correo electrónico</string>

    <string name="registrar">Registrar</string>
    <string name="salir">Salir</string>
    <string name="eliminar">Eliminar</string>
    <string name="carre">Carrera</string>
    <string name="update">Actualizar</string>
    <string name="asientos_ocupados">Asientos ocupados</string>
    <string name="message_security">Estimado usuario, para poder hacer uso de la app es necesario que introduzca la contraseña que los administradores le han proporcionado.</string>
    <string name="pass">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="eliminar_registros_actuales">Eliminar registros actuales</string>
    <string name="nuevos_agregar_registros_al_sistema">Nuevos Agregar registros al Sistema</string>
    <string name="setup_information">Setup Information</string>
    <string name="agregar_registros_al_firebase">Agregar Registros al Firebase</string>
    <string name="liberar_recursos_del_sistema">Liberar recursos del Sistema</string>
    <string name="message_pass">Introducir contraseña para acceder a funciones de administrador.</string>

    <string name="graduacion_tec">Graduación TecNM \n campus Uruapan</string>
    <string name="ingresa_los_datos_al_sistema_n_deben_de_tener_el_siguiente_formato_n_nsin_tel_fono_n">Ingresa los datos al sistema deben de tener el siguiente formato:  </string>
    <string name="ingresa_los_datos_al_sistema_n_deben_de_tener_el_siguiente_formato_n_nsin_tel_fono_n2">\"NUMERO CONTROL\",\"ID ASIENTO\",\"NOMBRE POR APELLIDOS(PATERNO MATERNO NOMBRES)\",\"NUMERO CARRERA\",\"GRUPO\",\"EMAIL\",\"\" </string>
    <string name="ingrese_los_datos_m_x_400_registros">Ingrese los datos máx 400 (registros)</string>
    <string name="agregar_datos_al_sistema">Agregar datos al sistema</string>
    <string name="numero_de_invitaciones">Número de invitaciones</string>

</resources>